# Glacier-Guides

./: .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GlacierGuides.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glacier_guides.vcxproj  glacier_guides.vcxproj.filters
.cmake/api/v1/reply/: cache-v2-fd31fa3b9dd79f39fa04.json  cmakeFiles-v1-1ad547d785cc36a9907f.json  codemodel-v2-a5a6ec30ce2bf24060d6.json  index-2025-04-03T22-16-34-0917.json  target-ALL_BUILD-Debug-e1717600a5fbe51d8d98.json  target-ZERO_CHECK-MinSizeRel-d3b45e800064c2ec60e4.json  target-glacier_guides-Debug-000173e20152d759872f.json  target-glacier_guides-MinSizeRel-3b856b5a5d67a2bdeaaf.json  target-glacier_guides-RelWithDebInfo-5ea1881ee8e70aad523f.json  target-glacier_guides-Release-a286119ba4466c625a84.json
SkiMap Data/: Age_of_Reason  Berries_Upper  Birds of Prey  Copperhead  Elkhorn_Trail.osm  Golden_Peak_Race  Golden_Peak_Race.osm  Harmony  Kellys_Toll_Road  Lodgers_Loop  Lookout_Bypass  ParkCity  Poppyfields_West  Poppyfields_West.osm  RedTail  Silk_Road_East  Silk_Road_East.osm  Sleepytime_Road  Thaynes_Canyon  The Slot  Tycoon
glacier_guides.dir/Debug/: glacier_guides.exe.recipe  glacier_guides.ilk
glacier_guides.dir/Debug/glacier_guides.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
resources/: Graph.cpp  Graph.h  TerrainParser.cpp  TerrainParser.h  TerrainRenderer.cpp  TerrainRenderer.h  main.cpp  map.osm
resources/SkiMap Data/: Backdoor.osm  Berries_Upper.osm  Birds_of_Prey.osm  Boa.osm  Kellys_Toll_Road.osm  Lady_of_the_Lake.osm  ParkCity.osm  Sleepytime_Road.osm  The_Slot.osm
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
